--- a/Meeta/index.html
+++ b/Meeta/index.html
@@ -141,9 +141,9 @@
                                     </div>
                                 </div>
 
-                                <div class="header-btn d-none d-md-block">
+                                <!-- <div class="header-btn d-none d-md-block">
                                     <a href="price.html" class="btn btn-3 btn-primary">Buy Ticket Now</a>
-                                </div>
+                                </div> -->
 
                                 <!-- Header Toggle Start -->
                                 <div class="header-toggle d-md-none">
