--- a/Meeta/index.html
+++ b/Meeta/index.html
@@ -71,15 +71,11 @@
                             <!-- Header Navigation Start -->
                             <div class="header-navigation">
                                 <ul class="main-menu">
-                                    <li class="active-menu"><a href="#">Home</a>
-                                        <ul class="sub-menu">
-                                            <li><a class="active" href="index.html">Home 01</a></li>
-                                            <li><a href="index-2.html">Home 02</a></li>
-                                            <li><a href="index-3.html">Home 03</a></li>
-                                            <li><a href="index-4.html">Home 04</a></li>
-                                            <li><a href="index-5.html">Home 05</a></li>
-                                            <li><a href="index-6.html">Home 06</a></li>
-                                        </ul>
+                                    <li class="active-menu"><a >Home</a>
+                                       <!-- <ul class="sub-menu">
+                                             <li><a class="active" href="index.html">Home 01</a></li>
+                                            
+                                        </ul> -->
                                     </li>
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="#">Pages</a>
@@ -244,11 +240,7 @@
                         <li class="active-menu"><a href="#">Home</a>
                             <ul class="sub-menu">
                                 <li><a class="active" href="index.html">Home 01</a></li>
-                                <li><a href="index-2.html">Home 02</a></li>
-                                <li><a href="index-3.html">Home 03</a></li>
-                                <li><a href="index-4.html">Home 04</a></li>
-                                <li><a href="index-5.html">Home 05</a></li>
-                                <li><a href="index-6.html">Home 06</a></li>
+                                
                             </ul>
                         </li>
                         <li><a href="about.html">About</a></li>
