--- a/Meeta/contact.html
+++ b/Meeta/contact.html
@@ -52,118 +52,11 @@
         <!-- Header Start -->
         <div class="meeta-header-section meeta-header-4">
 
-            <!-- Header Middle Start -->
-            <div class="header-middle header-sticky">
-                <div class="container-fluid custom-container">
-
-                    <div class="row align-items-center">
-                        <div class="col-lg-3 col-4">
-
-                            <!-- Header Logo Start -->
-                            <div class="header-logo">
-                                <a href="index.html"><img src="assets/images/logo-4.png" alt="Logo"></a>
-                            </div>
-                            <!-- Header Logo End -->
-
-                        </div>
-                        <div class="col-lg-6 d-none d-lg-block">
-
-                            <!-- Header Navigation Start -->
-                            <div class="header-navigation">
-                                <ul class="main-menu">
-                                    <li><a href="#">Home</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home 01</a></li>
-                                            <li><a href="index-2.html">Home 02</a></li>
-                                            <li><a href="index-3.html">Home 03</a></li>
-                                            <li><a href="index-4.html">Home 04</a></li>
-                                            <li><a href="index-5.html">Home 05</a></li>
-                                            <li><a href="index-6.html">Home 06</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="event-list.html">Event List</a></li>
-                                            <li><a href="event-single.html">Event Single</a></li>
-                                            <li><a href="schedule.html">Event Schedule</a></li>
-                                            <li><a href="speaker-one.html">Speakers 01</a></li>
-                                            <li><a href="speaker-two.html">Speakers 02</a></li>
-                                            <li><a href="speaker-single.html">Speaker Single</a></li>
-                                            <li><a href="gallery.html">Gallery</a></li>
-                                            <li><a href="price.html">Pricing</a></li>
-                                            <li><a href="faq.html">FAQ's</a></li>
-                                            <li><a href="login-register.html">Login Register</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog Grid</a></li>
-                                            <li><a href="blog-standard.html">Latest News</a></li>
-                                            <li><a href="blog-details.html">Blog Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="active-menu"><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </div>
-                            <!-- Header Navigation End -->
-
-                        </div>
-                        <div class="col-lg-3 col-8">
-
-                            <!-- Header Meta Start -->
-                            <div class="header-meta">
-
-                                <div class="header-actions">
-                                    <div class="header-action">
-                                        <button class="icon-open-container">
-                                            <span class="action-text">My Cart</span>
-                                            <i class="flaticon-shopping-cart"></i>
-                                            <span class="count">3</span>
-                                        </button>
-                                    </div>
-                                    <div class="header-action d-none d-sm-block">
-                                        <div class="header-search">
-                                            <a class="search-btn" href="#"><i class="flaticon-loupe"></i></a>
-                                            <div class="search-wrap">
-                                                <div class="search-inner">
-                                                    <i id="search-close" class="flaticon-close search-close"></i>
-                                                    <div class="search-cell">
-                                                        <form action="#">
-                                                            <div class="search-field-holder">
-                                                                <input class="main-search-input" type="search" placeholder="Search Your Keyword...">
-                                                            </div>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="header-btn d-none d-md-block">
-                                    <a href="price.html" class="btn btn-3 btn-primary">Buy Ticket Now</a>
-                                </div>
-
-                                <!-- Header Toggle Start -->
-                                <div class="header-toggle d-md-none">
-                                    <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </button>
-                                </div>
-                                <!-- Header Toggle End -->
-
-                            </div>
-                            <!-- Header Meta End -->
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <!-- Header Middle End -->
+           <script> 
+    $(function(){
+      $("#includedContent").load("header_menu.html"); 
+    });
+    </script> 
 
         </div>
         <!-- Header End -->
@@ -242,13 +135,10 @@
                 <div class="offcanvas-menu offcanvas-menu-2">
                     <ul class="main-menu">
                         <li><a href="#">Home</a>
-                            <ul class="sub-menu">
+                             <ul class="sub-menu">
                                 <li><a href="index.html">Home 01</a></li>
-                                <li><a href="index-2.html">Home 02</a></li>
-                                <li><a href="index-3.html">Home 03</a></li>
-                                <li><a href="index-4.html">Home 04</a></li>
-                                <li><a href="index-5.html">Home 05</a></li>
-                                <li><a href="index-6.html">Home 06</a></li>
+                                
+
                             </ul>
                         </li>
                         <li><a href="about.html">About</a></li>
@@ -292,7 +182,7 @@
                             <div class="page-banner text-center">
                                 <h2 class="title">Contact Us</h2>
                                 <ul class="breadcrumb justify-content-center">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
                                 </ul>
                             </div>
