Update new pages and images

--- a/Meeta/contact.html
+++ b/Meeta/contact.html
@@ -52,13 +52,6 @@
       <!-- Header Start -->
         <div class="meeta-header-section">
 
-<<<<<<< Updated upstream
-           <script> 
-    $(function(){
-      $("#includedContent").load("header_menu.html"); 
-    });
-    </script> 
-=======
             <!-- Header Middle Start -->
             <div class="header-middle header-sticky">
                 <div class="container-fluid custom-container">
@@ -166,124 +159,10 @@
                 </div>
             </div>
             <!-- Header Middle End -->
->>>>>>> Stashed changes
 
         </div>
         <!-- Header End -->
 
-<<<<<<< Updated upstream
-        <!-- Mini Cart Start -->
-        <div class="off-canvas">
-            <div class="icon-close"></div>
-
-            <!-- Mini Cart Box Start -->
-            <div class="meeta-mini-cart-box">
-
-                <div class="mini-cart-items">
-
-                    <div class="mini-cart-item">
-                        <div class="mini-cart-item-image">
-                            <a href="#"><img src="assets/images/cart/cart-1.jpg" alt="Cart"></a>
-                        </div>
-                        <div class="mini-cart-item-content">
-                            <h4 class="mini-cart-title"><a href="#">Virtual Event with Protected Content and Hidden Livestream </a></h4>
-                            <p class="mini-cart-quantity">1 × $19.99</p>
-                        </div>
-                        <button class="btn-close"></button>
-                    </div>
-
-                    <div class="mini-cart-item">
-                        <div class="mini-cart-item-image">
-                            <a href="#"><img src="assets/images/cart/cart-2.jpg" alt="Cart"></a>
-                        </div>
-                        <div class="mini-cart-item-content">
-                            <h4 class="mini-cart-title"><a href="#">Virtual Event with Protected Content and Hidden Livestream </a></h4>
-                            <p class="mini-cart-quantity">1 × $19.99</p>
-                        </div>
-                        <button class="btn-close"></button>
-                    </div>
-
-                    <div class="mini-cart-item">
-                        <div class="mini-cart-item-image">
-                            <a href="#"><img src="assets/images/cart/cart-3.jpg" alt="Cart"></a>
-                        </div>
-                        <div class="mini-cart-item-content">
-                            <h4 class="mini-cart-title"><a href="#">Virtual Event with Protected Content and Hidden Livestream </a></h4>
-                            <p class="mini-cart-quantity">1 × $19.99</p>
-                        </div>
-                        <button class="btn-close"></button>
-                    </div>
-
-                </div>
-
-                <div class="mini-cart-sub-total">
-                    <p><strong>Subtotal:</strong> <span class="mini-cart-amount">$99.97</span></p>
-                </div>
-                <div class="mini-cart-sub-btn">
-                    <a class="btn btn-primary" href="#">View cart</a>
-                    <a class="btn btn-white" href="#">Checkout</a>
-                </div>
-            </div>
-            <!-- Mini Cart Box End -->
-
-        </div>
-        <!-- Mini Cart End -->
-
-
-        <!-- Offcanvas Start-->
-        <div class="offcanvas offcanvas-start" id="offcanvasExample">
-            <div class="offcanvas-header">
-                <!-- Offcanvas Logo Start -->
-                <div class="offcanvas-logo">
-                    <a href="index.html"><img src="assets/images/logo-4.png" alt=""></a>
-                </div>
-                <!-- Offcanvas Logo End -->
-                <button type="button" class="close-btn" data-bs-dismiss="offcanvas"><i class="flaticon-close"></i></button>
-            </div>
-
-            <!-- Offcanvas Body Start -->
-            <div class="offcanvas-body">
-                <div class="offcanvas-menu offcanvas-menu-2">
-                    <ul class="main-menu">
-                        <li><a href="#">Home</a>
-                             <ul class="sub-menu">
-                                <li><a href="index.html">Home 01</a></li>
-                                
-
-                            </ul>
-                        </li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#">Pages</a>
-                            <ul class="sub-menu">
-                                <li><a href="event-list.html">Event List</a></li>
-                                <li><a href="event-single.html">Event Single</a></li>
-                                <li><a href="schedule.html">Event Schedule</a></li>
-                                <li><a href="speaker-one.html">Speakers 01</a></li>
-                                <li><a href="speaker-two.html">Speakers 02</a></li>
-                                <li><a href="speaker-single.html">Speaker Single</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="price.html">Pricing</a></li>
-                                <li><a href="faq.html">FAQ's</a></li>
-                                <li><a href="login-register.html">Login Register</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Blog</a>
-                            <ul class="sub-menu">
-                                <li><a href="blog.html">Blog Grid</a></li>
-                                <li><a href="blog-standard.html">Latest News</a></li>
-                                <li><a href="blog-details.html">Blog Details</a></li>
-                            </ul>
-                        </li>
-                        <li class="active-menu"><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- Offcanvas Body End -->
-        </div>
-        <!-- Offcanvas End -->
-
-=======
->>>>>>> Stashed changes
         <!-- Page Banner Start -->
         <div class="section page-banner-section">
             <div class="shape-2"></div>
@@ -295,7 +174,7 @@
                             <div class="page-banner text-center">
                                 <h2 class="title">Contact Us</h2>
                                 <ul class="breadcrumb justify-content-center">
-                                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
                                 </ul>
                             </div>
