--- a/Meeta/speaker-one.html
+++ b/Meeta/speaker-one.html
@@ -174,7 +174,7 @@
                             <div class="page-banner text-center">
                                 <h2 class="title">Speakers1</h2>
                                 <ul class="breadcrumb justify-content-center">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Speakers1</li>
                                 </ul>
                             </div>
@@ -212,12 +212,12 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-2.jpg" alt="Speaker"></a>
+                                <a href="speakers/parag.html"><img src="assets/images/speakers/parag.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">Harnold Min</a></h4>
-                                    <p class="speaker-designation">Lead Speaker</p>
+                                    <h4 class="speaker-name"><a href="speakers/parag.html">Parag Dave</a></h4>
+                                    <p class="speaker-designation">Security Engineer  </p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
@@ -229,12 +229,12 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-3.jpg" alt="Speaker"></a>
+                                <a href="speakers/devendra.html"><img src="assets/images/speakers/devendra.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">Joakim Ken</a></h4>
-                                    <p class="speaker-designation">Developer</p>
+                                    <h4 class="speaker-name"><a href="speakers/devendra.html">Devendra </a></h4>
+                                    <p class="speaker-designation">Security Engineer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
@@ -246,12 +246,12 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-4.jpg" alt="Speaker"></a>
+                                <a href="speakers/seedon.html"><img src="assets/images/speakers/seedon.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">Andrew Inon</a></h4>
-                                    <p class="speaker-designation">Developer</p>
+                                    <h4 class="speaker-name"><a href="speakers/seedon.html">Seedon</a></h4>
+                                    <p class="speaker-designation">Hardware Security Engineer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
@@ -263,12 +263,12 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-5.jpg" alt="Speaker"></a>
+                                <a href="speakers/kartik.html"><img src="assets/images/speakers/kartik.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">kin Joan</a></h4>
-                                    <p class="speaker-designation">Developer</p>
+                                    <h4 class="speaker-name"><a href="speakers/kartik.html">Kartik </a></h4>
+                                    <p class="speaker-designation">IoT Security</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
@@ -280,12 +280,12 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-6.jpg" alt="Speaker"></a>
+                                <a href="speakers/arif.html"><img src="assets/images/speakers/arif.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">Aronic Kenan</a></h4>
-                                    <p class="speaker-designation">Developer</p>
+                                    <h4 class="speaker-name"><a href="speakers/arif.html">Arif</a></h4>
+                                    <p class="speaker-designation">Security engineer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
@@ -297,12 +297,12 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-7.jpg" alt="Speaker"></a>
+                                <a href="speakers/shivam.html"><img src="assets/images/speakers/shivam.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">Kinda Mona</a></h4>
-                                    <p class="speaker-designation">Developer</p>
+                                    <h4 class="speaker-name"><a href="speakers/shivam.html">Shivam</a></h4>
+                                    <p class="speaker-designation">Security Analyst</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
@@ -314,12 +314,114 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-8.jpg" alt="Speaker"></a>
+                                <a href="speaker-single.html"><img src="assets/images/speakers/anurag.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="#">Mike Fermalin</a></h4>
-                                    <p class="speaker-designation">Developer</p>
+                                    <h4 class="speaker-name"><a href="speakers/anurag.html">Anurag</a></h4>
+                                    <p class="speaker-designation">cloud Security Engineer</p>
+                                </div>
+                                <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
+                                <div class="speaker-shape-2"></div>
+                            </div>
+                        </div>
+                        <!-- Single Speakers End -->
+                    </div>
+                <div class="col-lg-3 col-sm-6">
+                        <!-- Single Speakers Start -->
+                        <div class="single-speaker">
+                            <div class="speaker-image">
+                                <a href="speakers/parag.html"><img src="assets/images/speakers/parag.jpg" alt="Speaker"></a>
+                            </div>
+                            <div class="speaker-content">
+                                <div class="speaker-content-box">
+                                    <h4 class="speaker-name"><a href="speakers/parag.html">Parag Dave</a></h4>
+                                    <p class="speaker-designation">Security Engineer  </p>
+                                </div>
+                                <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
+                                <div class="speaker-shape-2"></div>
+                            </div>
+                        </div>
+                        <!-- Single Speakers End -->
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!-- Single Speakers Start -->
+                        <div class="single-speaker">
+                            <div class="speaker-image">
+                                <a href="speakers/devendra.html"><img src="assets/images/speakers/devendra.jpg" alt="Speaker"></a>
+                            </div>
+                            <div class="speaker-content">
+                                <div class="speaker-content-box">
+                                    <h4 class="speaker-name"><a href="speakers/devendra.html">Devendra </a></h4>
+                                    <p class="speaker-designation">Security Engineer</p>
+                                </div>
+                                <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
+                                <div class="speaker-shape-2"></div>
+                            </div>
+                        </div>
+                        <!-- Single Speakers End -->
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!-- Single Speakers Start -->
+                        <div class="single-speaker">
+                            <div class="speaker-image">
+                                <a href="speakers/seedon.html"><img src="assets/images/speakers/seedon.jpg" alt="Speaker"></a>
+                            </div>
+                            <div class="speaker-content">
+                                <div class="speaker-content-box">
+                                    <h4 class="speaker-name"><a href="speakers/seedon.html">Seedon</a></h4>
+                                    <p class="speaker-designation">Hardware Security Engineer</p>
+                                </div>
+                                <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
+                                <div class="speaker-shape-2"></div>
+                            </div>
+                        </div>
+                        <!-- Single Speakers End -->
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!-- Single Speakers Start -->
+                        <div class="single-speaker">
+                            <div class="speaker-image">
+                                <a href="speakers/kartik.html"><img src="assets/images/speakers/kartik.jpg" alt="Speaker"></a>
+                            </div>
+                            <div class="speaker-content">
+                                <div class="speaker-content-box">
+                                    <h4 class="speaker-name"><a href="speakers/kartik.html">Kartik </a></h4>
+                                    <p class="speaker-designation">IoT Security</p>
+                                </div>
+                                <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
+                                <div class="speaker-shape-2"></div>
+                            </div>
+                        </div>
+                        <!-- Single Speakers End -->
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!-- Single Speakers Start -->
+                        <div class="single-speaker">
+                            <div class="speaker-image">
+                                <a href="speakers/arif.html"><img src="assets/images/speakers/arif.jpg" alt="Speaker"></a>
+                            </div>
+                            <div class="speaker-content">
+                                <div class="speaker-content-box">
+                                    <h4 class="speaker-name"><a href="speakers/arif.html">Arif</a></h4>
+                                    <p class="speaker-designation">Security engineer</p>
+                                </div>
+                                <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
+                                <div class="speaker-shape-2"></div>
+                            </div>
+                        </div>
+                        <!-- Single Speakers End -->
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!-- Single Speakers Start -->
+                        <div class="single-speaker">
+                            <div class="speaker-image">
+                                <a href="speakers/shivam.html"><img src="assets/images/speakers/shivam.jpg" alt="Speaker"></a>
+                            </div>
+                            <div class="speaker-content">
+                                <div class="speaker-content-box">
+                                    <h4 class="speaker-name"><a href="speakers/shivam.html">Shivam</a></h4>
+                                    <p class="speaker-designation">Security Analyst</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
                                 <div class="speaker-shape-2"></div>
