--- a/Meeta/speaker-one.html
+++ b/Meeta/speaker-one.html
@@ -465,11 +465,10 @@
 
                 <!-- Footer widget Social Start -->
                 <div class="footer-widget-social">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-dribbble"></i></a>
-                    <a href="#"><i class="fab fa-behance"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com/owaspseasides"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/owaspseasides"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/company/owaspseasides/"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.youtube.com/channel/UCaZOyUr-QhT8Dh5LsRXIUrw"><i class="fab fa-youtube"></i></a>
                 </div>
                 <!-- Footer widget Social End -->
 
