Resolved Header Links
Properly working header on any page.

--- a/Meeta/contact.html
+++ b/Meeta/contact.html
@@ -354,7 +354,7 @@
 
                 <!-- Footer Copyright Start -->
                 <div class="footer-copyright">
-                    <p>2022 Copyright Meeta Designed by Pixelcurve. All Rights Reserved</p>
+                    <p>2022 Copyright Seasides Designed by Team Sesaides. All Rights Reserved</p>
                 </div>
                 <!-- Footer Copyright End -->
 
