--- a/Meeta/narendra.html
+++ b/Meeta/narendra.html
@@ -136,8 +136,8 @@
                                     </div>
                                 </div>
 
-                                <!-- <div class="header-btn d-none d-md-block">
-                                    <a href="price.html" class="btn btn-3 btn-primary">Buy Ticket Now</a>
+                                <div class="header-btn d-none d-md-block">
+                                <a href="price.html" class="btn btn-3 btn-primary">Buy Ticket Now</a>
                                 </div> -->
 
                                 <!-- Header Toggle Start -->
