--- a/Meeta/speakers/arif.html
+++ b/Meeta/speakers/arif.html
@@ -71,12 +71,12 @@
                             <!-- Header Navigation Start -->
                             <div class="header-navigation">
                                 <ul class="main-menu">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="event-list.html">Sessions</a></li>
-                                    <li><a href="schedule.html">Schedule</a></li>
-                                    <li><a href="speaker-one.html">Speakers</a></li>
-                                    <li><a href="sponsors-one.html">Sponsors</a></li>
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../event-list.html">Sessions</a></li>
+                                    <li><a href="../schedule.html">Schedule</a></li>
+                                    <li><a href="../speaker-one.html">Speakers</a></li>
+                                    <li><a href="../sponsors-one.html">Sponsors</a></li>
+                                    <li><a href="../about.html">About</a></li>
                                     <!--<li><a href="#">Pages</a>
                                         <ul class="sub-menu">
                                             <li><a href="event-list.html">Event List</a></li>
@@ -98,7 +98,7 @@
                                             <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul>
                                     </li> -->   
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="../contact.html">Contact</a></li>
                                 </ul>
                             </div>
                             <!-- Header Navigation End -->
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
 
-                                <!-- <div class="header-btn d-none d-md-block">
+                                <div class="header-btn d-none d-md-block">
                                     <a href="price.html" class="btn btn-3 btn-primary">Buy Ticket Now</a>
                                 </div> -->
 
