--- a/Meeta/speakers/parag (another copy).html
+++ b/Meeta/speakers/parag (another copy).html
@@ -70,13 +70,13 @@
 
                             <!-- Header Navigation Start -->
                             <div class="header-navigation">
-                                <ul class="main-menu">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="event-list.html">Sessions</a></li>
-                                    <li><a href="schedule.html">Schedule</a></li>
-                                    <li><a href="speaker-one.html">Speakers</a></li>
-                                    <li><a href="sponsors-one.html">Sponsors</a></li>
-                                    <li><a href="about.html">About</a></li>
+                               <ul class="main-menu">
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../event-list.html">Sessions</a></li>
+                                    <li><a href="../schedule.html">Schedule</a></li>
+                                    <li><a href="../speaker-one.html">Speakers</a></li>
+                                    <li><a href="../sponsors-one.html">Sponsors</a></li>
+                                    <li><a href="../about.html">About</a></li>
                                     <!--<li><a href="#">Pages</a>
                                         <ul class="sub-menu">
                                             <li><a href="event-list.html">Event List</a></li>
@@ -98,7 +98,7 @@
                                             <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul>
                                     </li> -->   
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="../contact.html">Contact</a></li>
                                 </ul>
                             </div>
                             <!-- Header Navigation End -->
